# pupu

./: .actrc  .gitignore  .releaserc.js  .releaserc.json  .releaserc.mjs  ACCEPTABLE_USE_POLICY.md  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  app.config.ts  components.json  eslint.config.ts  index.html  native.config.ts  package.json  playwright.config.ts  pyproject.toml  schema.prisma  styles.css  task.yml  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts  wrangler.json  总结文档.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: request.md  你遇到了bug-.md  有希望改进的地方-.md
.github/actions/initialize-project/: action.yml
.github/workflows/: _release.yml  auto_deploy.yml  deploy.yml  release.yml  semantic_release.yml  web-release.yml
.obsidian/: community-plugins.json  core-plugins.json  workspace.json
.obsidian/plugins/homepage/: main.js
.obsidian/plugins/jupyter/: data.json  jupyter_lab_config.py  main.js  manifest.json
.obsidian/plugins/obsidian-excalidraw-plugin/: data.json  manifest.json
.obsidian/plugins/obsidian42-brat/: data.json
cli/dp2p-relay/: Cargo.toml
cli/pupu-relay/: Cargo.toml
cli/starlink-relay/: Cargo.toml
crates/endpoint/: Cargo.toml
crates/endpoint-wasm/: Cargo.toml
crates/endpoint-wasm/src/: lib.rs  traits.rs  types.rs  utils.rs
crates/endpoint/src/: lib.rs  service.rs
crates/person-protocol/: Cargo.toml
crates/person-protocol/src/: lib.rs
crates/person_protocol/: Cargo.toml
crates/person_protocol/src/: lib.rs
crates/starlink-relay/: Cargo.toml
crates/starlink-relay/src/: main.rs
crates/utils/: Cargo.toml
crates/utils/src/: lib.rs  option_ext.rs
docs/: ACCEPTABLE_USE_POLICY.md  CONTRIBUTING.md  DEVELOPER_GUIDE.md
docs/arch/: arch_zh.md
docs/excalidraw/: PROJECT_ARCH.md
docs/zh/: CONTRIBUTING.md  PROJECT_ARCH.md  README.md
native/: .gitignore  Cargo.toml  tauri.conf.json
native/capabilities/: default.json
native/src/: api.rs  endpoint.rs  error.rs  file_system.rs  lib.rs  logger.rs  main.rs  option_ext.rs  router.rs  sqlite.rs  state.rs  tauri_plugin_builder.rs  tauri_state_builder.rs
native/src/api/: endpoint.rs  file_system.rs  log.rs  sqlite.rs
native/src/api/endpoint/: connection.rs  person_protocol_event_next.rs
native/src/api/sqlite/: types.rs
native/src/endpoint/: chat_request.rs  connection.rs  friend_request.rs  person_protocol_event_next.rs
native/src/router/: api.rs  endpoint_api.rs  log.rs  sqlite.rs  sqlite_api.rs
native/src/router/endpoint_api/: endpoint.rs
native/src/router/sqlite/: traits.rs  types.rs  utils.rs
native/src/router/sqlite_api/: traits.rs  utils.rs
native/src/sqlite/: types.rs
native/src/state/: database.rs
network/: Cargo.toml
network/src/: lib.rs  network.rs  wasm.rs
network/src/network/: user_protocol.rs
network/src/wasm/: network.rs  utils.rs
network/src/wasm/network/: user_protocol.rs
protocol/: Cargo.toml  build.rs  user.proto
protocol/src/: lib.rs
public/: db_schema.sql
scripts/: db_into_schema.py  generate_db_schema.ts  generate_schema.ts  generate_version.ts  insert_android_sign_config.py
src/: .gitignore  app.css  app.tsx  config.ts  database.ts  entry-client.tsx  entry-server.tsx  indexeddb.ts  main.ts  main.tsx  query.ts  render.tsx  routeTree.gen.ts  style.css
src-tauri/: tauri.conf.json
src-tauri/src/: lib.rs
src/components/: context.tsx  errored.tsx  loading.tsx
src/components/modal/: about.tsx  add_friend.tsx  error.tsx  loading.tsx
src/components/ui/: friend_list.tsx  login.tsx  menu_bar.tsx  register.tsx  sidebar_button_group.tsx  sidebar_user.tsx  sonner.tsx  user_info_window.tsx  userbar.tsx  window_control_bar.tsx
src/components/widgets/: avatar.tsx  error.tsx  image.tsx  loading.tsx
src/lib/: blob_to_data_url.ts  database.ts  endpoint.ts  file_system.ts  interface.ts  module.ts  network.ts  observable_map.ts  opener.ts  query_builder.ts  sqlite.ts  state.ts  types.ts  user_info.ts  window.ts
src/lib/endpoint/: interface.ts  native.ts  types.ts  web.ts
src/lib/file-system/: interface.ts  native.ts  web.ts
src/lib/file-system/adapter/: interface.ts  native.ts  web.ts
src/lib/invoke/: endpoint.ts  error.ts  file_system.ts  log.ts  sqlite.ts
src/lib/sqlite/: interface.ts  native.ts  types.ts  web.ts
src/lib/sqlite/web/: worker.ts
src/lib/state/: database.ts
src/routes/: (main).tsx  __root.tsx  app.tsx  boot.tsx  index.tsx  viewport.tsx  window.tsx
src/routes/(main)/: auth.tsx  index.tsx
src/routes/(main)/home/: [user_id].tsx
src/routes/app/: (app).tsx  home.$user_id.tsx  login.tsx
src/routes/app/home.$user_id/: chat.$friend_id.tsx  chat.$user_id.tsx
src/routes/boot/: app.tsx
src/routes/boot/app/: home.$user_id.tsx  login.tsx
src/routes/boot/app/home.$user_id/: chat.$friend_id.tsx
src/routes/viewport/: login.tsx  main.$user_id.tsx
src/routes/window/: app.tsx  chat.tsx  login.tsx
src/routes/window/app/: chat.$account_id.tsx  home.$user_id.tsx  login.tsx
src/routes/window/app/chat.$account_id/: chatbar.tsx
src/routes/window/app/home.$user_id/: chat.$friend_id.tsx
src/shadcn/components/ui/: accordion.tsx  alert-dialog.tsx  alert.tsx  avatar.tsx  badge.tsx  breadcrumb.tsx  button-group.tsx  button.tsx  calendar.tsx  card.tsx  carousel.tsx  chart.tsx  checkbox.tsx  command.tsx  context-menu.tsx  dialog.tsx  drawer.tsx  dropdown-menu.tsx  empty.tsx  field.tsx  form.tsx  hover-card.tsx  input-group.tsx  input-otp.tsx  input.tsx  item.tsx  kbd.tsx  label.tsx  menubar.tsx  navigation-menu.tsx  pagination.tsx  popover.tsx  progress.tsx  radio-group.tsx  resizable.tsx  scroll-area.tsx  select.tsx  separator.tsx  sheet.tsx  sidebar.tsx  (+10 more)
src/stores/: home.ts  main.ts
src/types/: sqlite-wasm.d.ts
src/worker/: sqlite-api.ts  sqlite.ts
tests/: app.test.ts  auth.test.ts
wasm/: Cargo.toml
wasm/.cargo/: config.toml
wasm/endpoint/: Cargo.toml
wasm/endpoint/src/: lib.rs  types.rs  utils.rs
wasm/src/: lib.rs  node.rs  service.rs  wasm.rs
wasm/src/wasm/: node.rs  utils.rs
