[package]
name = "native"
version = "0.1.0"
edition = "2024"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.2", features = [] }

[dependencies]
tauri = { version = "2.9.3", features = [] }
serde_json = "1.0.145"
tauri-plugin-prevent-default = { version = "4.0.2", features = [
    "platform-windows",
] }
tauri-plugin-single-instance = "2.3.6"
tauri-plugin-os = "2.3.2"
tauri-plugin-opener = "2.5.2"

thiserror = "2.0.17"
eyre = "0.6.12"
log = "0.4.28"
flexi_logger = { version = "0.31.7", features = ["json", "compress"] }
parking_lot = "0.12.5"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["parking_lot", "fs", "sync"] }
slab = "0.4.11"
rusqlite = { version = "0.37.0", features = ["bundled", "hooks"] }
rand = "0.9.2"
iroh = "0.95.1"
