[package]
name = "native"
version = "0.1.0"
edition = "2024"
default-run = "native"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
person-protocol = { path = "../crates/person-protocol" }

tauri = { version = "2.9.5", features = ["test"] }
serde_json = "1.0.148"
taurpc = "0.5.2"
specta = { version = "2.0.0-rc.22", features = ["serde_json"] }
specta-typescript = "0.0.9"
tauri-plugin-prevent-default = { version = "4.0.3", features = [
    "platform-windows",
] }
tauri-plugin-single-instance = "2.3.6"
tauri-plugin-os = "2.3.2"
tauri-plugin-opener = "2.5.2"

thiserror = "2.0.17"
eyre = "0.6.12"
log = "0.4.29"
flexi_logger = { version = "0.31.7", features = ["json", "compress"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = [
    "parking_lot",
    "rt-multi-thread",
    "macros",
    "fs",
] }
parking_lot = "0.12.5"
async-channel = "2.5.0"
sharded-slab = "0.1.7"
tokio-rusqlite = { version = "0.7.0", features = ["bundled", "hooks"] }
rand = "0.9.2"
iroh = { version = "0.95.1", features = [
    "discovery-local-network",
    "discovery-pkarr-dht",
] }
iroh-gossip = "0.95.0"
iroh-blobs = "0.97.0"
iroh-relay = { version = "0.95.1", default-features = false }
