[package]
name = "native"
version = "0.1.0"
edition = "2024"
default-run = "native"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.5", features = [] }

[dependencies]
utils = { path = "../crates/utils" }
endpoint = { path = "../crates/endpoint" }
person-protocol = { path = "../crates/person-protocol" }

tauri = { version = "2.10.2", features = ["test"] }
serde_json = "1.0.149"
taurpc = "0.6.0"
specta = { version = "2.0.0-rc.22", features = ["serde_json"] }
specta-typescript = "0.0.9"
tauri-plugin-prevent-default = { version = "4.0.3", features = [
    "platform-windows",
] }
tauri-plugin-single-instance = "2.4.0"
tauri-plugin-os = "2.3.2"
tauri-plugin-opener = "2.5.3"
tauri-plugin-notification = "2.3.3"

eyre = "0.6.12"
log = "0.4.29"
flexi_logger = { version = "0.31.8", features = ["json", "compress"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.49.0", features = [
    "parking_lot",
    "rt-multi-thread",
    "macros",
    "fs",
] }
sharded-slab = "0.1.7"
tokio-rusqlite = { version = "0.7.0", features = ["bundled", "hooks"] }
