[package]
name = "network"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
protocol = { path = "../protocol" }

eyre = "0.6.12"
serde = { version = "1.0.227", features = ["derive"] }

rand_0_8_5 = { package = "rand", version = "0.8.5" } #dependi: disable-check
iroh = "0.92.0"
iroh-gossip = "0.92.0"

wasm-bindgen = "0.2.104"
wasm-bindgen-futures = "0.4.54"
serde-wasm-bindgen = "0.6.5"
