[package]
name = "endpoint-wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
person-protocol = { workspace = true }
wasm-bindgen = "0.2.106"
wasm-bindgen-futures = "0.4.56"
serde-wasm-bindgen = "0.6.5"
console_error_panic_hook = "0.1.7"
wasm-logger = "0.2.0"
log = "0.4.29"
eyre = "0.6.12"
rand = "0.9.2"
iroh = { version = "0.95.1", default-features = false }
iroh-relay = { version = "0.95.1", default-features = false }
iroh-gossip = { version = "0.95.0", default-features = false, features = [
    "net",
] }
iroh-blobs = { version = "0.97.0", default-features = false }
tokio = { version = "1.48.0", default-features = false, features = [
    "parking_lot",
    "sync",
] }
