[package]
name = "endpoint"
version = "0.1.0"
edition = "2024"

[dependencies]
eyre = "0.6.12"
log = "0.4.28"
n0-error = "0.1.2"
iroh = "0.95.1"
iroh-blobs = { version = "0.97.0", default-features = false }
rkyv = "0.8.12"
tokio = { version = "1.48.0", default-features = false, features = [
    "parking_lot",
    "sync",
] }
parking_lot = "0.12.5"
serde = { version = "1.0.228", features = ["derive"] }
