[package]
name = "endpoint"
version = "0.1.0"
edition = "2024"

[dependencies]
utils = { path = "../utils" }
person-protocol = { path = "../person-protocol" }

eyre = "0.6.12"
serde = { version = "1.0.228", features = ["derive"] }
iroh-relay = { version = "0.95.1", default-features = false }
async-channel = "2.5.0"
sharded-slab = "0.1.7"
parking_lot = "0.12.5"
base64 = "0.22.1"
serde_json = "1.0.148"

[target.'cfg(target_family = "wasm")'.dependencies]
iroh = { version = "0.95.1", default-features = false }
iroh-gossip = { version = "0.95.0", default-features = false }
iroh-blobs = { version = "0.97.0", default-features = false }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
iroh = { version = "0.95.1", features = [
    "discovery-local-network",
    "discovery-pkarr-dht",
] }
iroh-gossip = "0.95.0"
iroh-blobs = "0.97.0"
