[package]
name = "person-protocol"
version = "0.1.0"
edition = "2024"

[dependencies]
eyre = "0.6.12"
log = "0.4.29"
n0-error = "0.1.3"
iroh = { version = "0.96.1", default-features = false }
rkyv = "0.8.15"
serde = { version = "1.0.228", features = ["derive"] }
strum = { version = "0.27.2", features = ["derive"] }
futures = "0.3.31"
async-channel = "2.5.0"
