[package]
name = "person-protocol"
version = "0.1.0"
edition = "2024"

[dependencies]
eyre = "0.6.12"
n0-error = "0.1.2"
iroh = { version = "0.95.1", default-features = false }
rkyv = "0.8.12"
tokio = { version = "1.48.0", default-features = false, features = [
    "parking_lot",
    "sync",
] }
serde = { version = "1.0.228", features = ["derive"] }
strum = { version = "0.27.2", features = ["derive"] }
