[package]
name = "endpoint-wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
endpoint = { path = "../../crates/endpoint" }
person-protocol = { path = "../../crates/person-protocol" }

wasm-bindgen = "0.2.106"
wasm-bindgen-futures = "0.4.56"
serde-wasm-bindgen = "0.6.5"
console_error_panic_hook = "0.1.7"
wasm-logger = "0.2.0"
log = "0.4.29"
eyre = "0.6.12"
